[Title] TypeCast 완성
[Desc] TypeInfo를 활용하여서, RTTI를 최소로 사용한 TypeCast 완성
[Type/Branch] Feature / Update
[Auther/Data] LeeWonmock / 24-04-02

## Type - fix / test / feature / refac / bug / study
## Branch -
## Auther
## Date
## Desc

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,20 +8,20 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug",
+            "name": "LLDB",
             "program": "${workspaceFolder}/demofile/build/Debug/Demofile.exe",
             "args": [],
             "cwd": "${workspaceFolder}"
         }
         ,
         {
-            "name" : "Debug with MSVC",
+            "name" : "VSDBG",
             "type" : "cppvsdbg",
             "request" : "launch",
             "program" : "${workspaceFolder}/demofile/build/Debug/Demofile.exe",
             "args" : [],
             "cwd" : "${workspaceFolder}",
-            "stopAtEntry" : true,
+            "stopAtEntry" : false,
         }
     ]
 }
