[Title] TypeReflection 관련 수정, C++11에서도 사용 가능하도록 Custom
[Desc]
- Template을 이용하여서, C++11에서도 std::void_t, std::remove_pointer_t와 같은 기능 구현 및 추가
- Type Macro 및 Cast 관련하여 내부 코드 수정
[Type/Branch] feature / Update
[Auther/Data] Winteradio / 2025-02-02

## Type - fix / test / feature / refac / bug / study
## Branch -
## Auther
## Date
## Desc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "ostream": "cpp",
-        "xtr1common": "cpp"
+        "xtr1common": "cpp",
+        "type_traits": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
