--- a/demofile/CMakelists.txt
+++ b/demofile/CMakelists.txt
@@ -37,9 +37,10 @@ LIST(APPEND SRCS
     ${PROPERTYREFLECTION_DIR}/PropertyMacro.h
 
     ${TYPEREFLECTION_DIR}/TypeInfo.h ${TYPEREFLECTION_DIR}/TypeInfo.cpp
-    ${TYPEREFLECTION_DIR}/TypeInfoManager.h ${TYPEREFLECTION_DIR}/TypeInfoManager.h
+    ${TYPEREFLECTION_DIR}/TypeDetection.h
     ${TYPEREFLECTION_DIR}/TypeMacro.h
     ${TYPEREFLECTION_DIR}/TypeCast.h
+    ${TYPEREFLECTION_DIR}/TypeRemovePointer.h
 )
 
 LIST(APPEND INCS 
@@ -124,7 +125,6 @@ SET( ARC_DIR ${MAIN_DIR}/build/arc )
 EXTERNALPROJECT_ADD(
 	LogProject
 	GIT_REPOSITORY GIT_REPOSITORY https://github.com/Winteradio/Log.git
-	GIT_TAG "v2.4.0"
 
 	PREFIX ${PREFIX_DIR}/LogProject
 
