[Title] Demofile 코드 수정
[Desc]
- Type Reflection이 적용되지 않은 객체에 대해선 TypeCast 시 컴파일 오류가 발생
- 해당 코드 주석 처리
[Type/Branch] bug / BugFix
[Auther/Data] Winteradio / 2025-02-02

## Type - fix / test / feature / refac / bug / study
## Branch -
## Auther
## Date
## Desc

--- a/externaldemofile/CMakeLists.txt
+++ b/externaldemofile/CMakeLists.txt
@@ -117,9 +117,9 @@ EXTERNALPROJECT_ADD(
  		-DINSTALL_DEMO_FILE=OFF 
 )
 
-LIST( APPEND DEP_LIST ReflectioProject )
+LIST( APPEND DEP_LIST ReflectionProject )
 LIST( APPEND DEP_INCLUDE ${DEMO_INCLUDE_DIR} )
-LIST( APPEND DEP_LIBS ${DEMO_ARC_DIR}/ReflectioProject.${STATIC_LIB} )
+LIST( APPEND DEP_LIBS ${DEMO_ARC_DIR}/ReflectionProject.${STATIC_LIB} )
 
 MESSAGE( STATUS "Downloading Done" )
 # ----------------------------------------------- #
