[Title] Namespace 정보도 추출할 수 있게 변경
[Desc]
- 기존의 TypeReflection에선 객체의 Namespace도 같이 넘겨줘야 했음
- TypeInfo 자체만 사용하기에는 문제가 없지만, TypeManager에 TypeInfo를 넣어서 관리하기에는 이름이 중복되었음
- 그렇기에, 객체 이름 자체가 필요하여서, FUNCSIG 매크로를 통해서 전체 함수 정보를 얻고, 거기서 Namespace + Class 명칭까지 얻는 것으로 변경
[Type/Branch] Feature / Update
[Auther/Data] Winteradio / 2025-02-08

## Type - fix / test / feature / refac / bug / study
## Branch -
## Auther
## Date
## Desc

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -57,9 +57,10 @@ LIST( APPEND SOURCE_DIR
     ${PROPERTYREFLECTION_DIR}/PropertyInfo.h
 
     ${TYPEREFLECTION_DIR}/TypeMacro.h
-    ${TYPEREFLECTION_DIR}/TypeInfo.h ${TYPEREFLECTION_DIR}/TypeInfo.cpp
     ${TYPEREFLECTION_DIR}/TypeCast.h
-    ${TYPEREFLECTION_DIR}/TypeUtils.h
+    ${TYPEREFLECTION_DIR}/TypeUtils.h ${TYPEREFLECTION_DIR}/TypeUtils.cpp
+    ${TYPEREFLECTION_DIR}/TypeInfo.h ${TYPEREFLECTION_DIR}/TypeInfo.cpp
+    ${TYPEREFLECTION_DIR}/TypeManager.h ${TYPEREFLECTION_DIR}/TypeManager.cpp
     )
 
 IF ( WIN32 )
