[Title] ExternalDemofile 관련 코드 수정
[Desc]
- Main Project에서 ExternalDemofile 안되는 문제 해결
[Type/Branch]
[Auther/Data]

## Type - fix / test / feature / refac / bug / study
## Branch -
## Auther
## Date
## Desc

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -20,7 +20,7 @@ MESSAGE( STATUS "Set Path" )
 
 ## Set Directories
 SET( MAIN_DIR ${CMAKE_SOURCE_DIR} )
-SET( DEMOFILE_DIR ${MAIN_DIR}/demofile )
+SET( DEMOFILE_DIR ${MAIN_DIR}/externaldemofile )
 
 SET( CORE_DIR ${MAIN_DIR}/Core )
 SET( METHODREFLECTION_DIR ${MAIN_DIR}/MethodReflection )
