--- a/demofile/CMakelists.txt
+++ b/demofile/CMakelists.txt
@@ -5,7 +5,6 @@ cmake_minimum_required(VERSION 3.20)
 project(Demofile LANGUAGES CXX)
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/Project.cmake)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/ExternalProject.cmake)
 project_options()
 
 # ------ Create the executable program ------ #
@@ -16,6 +15,9 @@ else ()
     message(STATUS "- Demo Platform : Others")
     add_executable(${PROJECT_NAME})
 endif()
+
+# ------ Load the extenral project ------ #
+include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/ExternalProject.cmake)
 
 # ------ Load the log project ------ #
 add_external_library(
