--- a/externaldemofile/CMakeLists.txt
+++ b/externaldemofile/CMakeLists.txt
@@ -5,7 +5,6 @@ cmake_minimum_required(VERSION 3.20)
 project(ExtDemofile LANGUAGES CXX)
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/Project.cmake)
-include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/ExternalProject.cmake)
 project_options()
 
 # ------ Create the executable program ------ #
@@ -17,12 +16,14 @@ else()
     add_executable(${PROJECT_NAME})
 endif()
 
+# ------ Load the extenral project ------ #
+include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/ExternalProject.cmake)
+
 # ------ Load the log project ------ #
 add_external_library(
     PROJECT_NAME LogProject_Ext
     LIBRARY_NAME LogProject
     GIT_REPOSITORY https://github.com/Winteradio/Log.git
-    GIT_TAG CMAKE_TEST
     BUILD_SHARED_LIBS ON
 )
 
