--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,15 +1,10 @@
 cmake_minimum_required(VERSION 3.20)
 project(ReflectionProject LANGUAGES CXX)
 
-# ------ Include the cmake modules ------ #
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Project.cmake)
-
-project_options()
-
 # ------ Create the library ------ #
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Library.cmake)
 
-option(BUILD_SHARED_LIBS "Build a shared library instead of a static one" ON)
+option(BUILD_SHARED_LIBS "Build a shared library instead of a static one" OFF)
 
 set(MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(METHOD_REFLECTION_DIR ${MAIN_DIR}/MethodReflection)
@@ -54,6 +49,11 @@ install_library(
     PUBLIC_HEADERS ${HEADER_LIST}
     PUBLIC_INCLUDE_DIRS ${INCLUDE_DIR_LIST}
 )
+
+# ------ Set the project options ------ #
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Project.cmake)
+
+project_options()
 
 # ------ Create the Demofile ------ #
 option(BUILD_DEMO_FILE "Build the demo file" ON)
