--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -7,34 +7,30 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Library.cmake)
 option(BUILD_SHARED_LIBS "Build a shared library instead of a static one" OFF)
 
 set(MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-set(METHOD_REFLECTION_DIR ${MAIN_DIR}/MethodReflection)
-set(PROPERTY_REFLECTION_DIR ${MAIN_DIR}/PropertyReflection)
-set(TYPE_REFLECTION_DIR ${MAIN_DIR}/TypeReflection)
+set(HEADER_DIR ${MAIN_DIR}/include)
+set(SOURCE_DIR ${MAIN_DIR}/src)
 
 set(INCLUDE_DIR_LIST
-    ${METHOD_REFLECTION_DIR}
-    ${PROPERTY_REFLECTION_DIR}
-    ${TYPE_REFLECTION_DIR}
+    ${MAIN_DIR}/include
 )
 
 set(HEADER_LIST
-    ${METHOD_REFLECTION_DIR}/MethodMacro.h
-    ${METHOD_REFLECTION_DIR}/MethodInfo.h
-
-    ${PROPERTY_REFLECTION_DIR}/PropertyMacro.h
-    ${PROPERTY_REFLECTION_DIR}/PropertyInfo.h
-
-    ${TYPE_REFLECTION_DIR}/TypeMacro.h
-    ${TYPE_REFLECTION_DIR}/TypeCast.h
-    ${TYPE_REFLECTION_DIR}/TypeUtils.h
-    ${TYPE_REFLECTION_DIR}/TypeInfo.h
-    ${TYPE_REFLECTION_DIR}/TypeManager.h
+    ${HEADER_DIR}/Reflection/Macro.h
+    ${HEADER_DIR}/Reflection/MethodInfo.h
+    ${HEADER_DIR}/Reflection/PropertyInfo.h
+    ${HEADER_DIR}/Reflection/Reflection.h
+    ${HEADER_DIR}/Reflection/TypeCast.h
+    ${HEADER_DIR}/Reflection/TypeInfo.h
+    ${HEADER_DIR}/Reflection/TypeManager.h
+    ${HEADER_DIR}/Reflection/Utils.h
 )
 
 set(SOURCE_LIST
-    ${TYPE_REFLECTION_DIR}/TypeUtils.cpp
-    ${TYPE_REFLECTION_DIR}/TypeInfo.cpp
-    ${TYPE_REFLECTION_DIR}/TypeManager.cpp
+    ${SOURCE_DIR}/MethodInfo.cpp
+    ${SOURCE_DIR}/PropertyInfo.cpp
+    ${SOURCE_DIR}/TypeInfo.cpp
+    ${SOURCE_DIR}/TypeManager.cpp
+    ${SOURCE_DIR}/Utils.cpp
 )
 
 create_library(
