[Title] Edit the CI/CD
[Desc]
[Type/Branch]
[Auther/Data]

## Type - fix / test / feature / refac / bug / study
## Branch -
## Auther
## Date
## Desc

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required(VERSION 3.20)
 project(ReflectionProject LANGUAGES CXX)
 
 # ------ Create the library ------ #
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Library.cmake)
+include(${CMAKE_SOURCE_DIR}/external/CMake/Library.cmake)
 
-option(BUILD_SHARED_LIBS "Build a shared library instead of a static one" OFF)
+option(BUILD_SHARED_LIBS "Build a shared library instead of a static one" ON)
 
-set(MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+set(MAIN_DIR ${CMAKE_SOURCE_DIR})
 set(HEADER_DIR ${MAIN_DIR}/include)
 set(SOURCE_DIR ${MAIN_DIR}/src)
 
@@ -55,7 +55,7 @@ install_library(
 )
 
 # ------ Set the project options ------ #
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Project.cmake)
+include(${CMAKE_SOURCE_DIR}/external/CMake/Project.cmake)
 
 project_options()
 
@@ -65,13 +65,7 @@ option(BUILD_DEMO_FILE "Build the demo file" ON)
 if (BUILD_DEMO_FILE)
     message(STATUS "# Create the demofile project")
 
-    if (BUILD_SHARED_LIBS)
-        set(EXTDEMOFILE_DIR ${MAIN_DIR}/externaldemofile)
-
-        add_subdirectory(${EXTDEMOFILE_DIR})
-    else()
-        set(DEMOFILE_DIR ${MAIN_DIR}/demofile)
-        
-        add_subdirectory(${DEMOFILE_DIR})
-    endif()
+    set(DEMOFILE_DIR ${MAIN_DIR}/demofile)
+    
+    add_subdirectory(${DEMOFILE_DIR})
 endif()
