[Title] Add the container module
[Desc]
[Type/Branch]
[Auther/Data]

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/Log"]
 	path = external/Log
 	url = https://github.com/Winteradio/Log.git
+[submodule "external/Container"]
+	path = external/Container
+	url = https://github.com/Winteradio/Container.git
